--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -5,331 +5,241 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ShareAndCare Assistant</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.js"></script>
-    <style>
-      .chat-container {
-        height: 70vh;
-        overflow-y: auto;
-        scroll-behavior: smooth;
-      }
-      .message-bubble {
-        max-width: 75%;
-        word-wrap: break-word;
-      }
-      .user-message {
-        background-color: #3b82f6;
-        color: white;
-      }
-      .ai-message {
-        background-color: #e5e7eb;
-        color: black;
-      }
-      .admin-message {
-        background-color: #10b981;
-        color: white;
-      }
-      .system-message {
-        background-color: #f3f4f6;
-        color: #6b7280;
-        font-style: italic;
-      }
-    </style>
+    <script src="/socket.io/socket.io.js"></script>
   </head>
-  <body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
-    <div class="w-full max-w-2xl bg-white rounded-lg shadow-lg p-6">
-      <header class="text-center mb-6">
-        <h1 class="text-2xl font-bold text-gray-800">ShareAndCare Assistant</h1>
-        <p id="userStatus" class="text-sm text-gray-500 mt-2">Anonymous</p>
-        <p id="chatStatus" class="text-sm text-gray-500 mt-1">
-          Chatting with AI
-        </p>
-      </header>
+  <body class="bg-gray-100 h-screen flex flex-col">
+    <div class="bg-blue-600 text-white p-4">
+      <h1 class="text-2xl font-bold">ShareAndCare Assistant</h1>
+      <div class="mt-2">
+        <span id="userStatus">Anonymous</span>
+        <span id="chatMode" class="ml-4">Chatting with AI</span>
+      </div>
+    </div>
 
-      <section class="mb-6">
-        <div class="flex justify-center gap-4">
+    <div class="flex-1 overflow-auto p-4">
+      <div class="max-w-2xl mx-auto">
+        <div id="chatHistory" class="bg-white rounded-lg shadow p-4 mb-4">
+          <p class="text-gray-500">No chat history available</p>
+        </div>
+
+        <div class="flex space-x-2">
           <button
             id="loginBtn"
-            class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition"
+            class="bg-blue-500 text-white px-4 py-2 rounded"
           >
             Login
           </button>
           <button
-            id="requestAdminBtn"
-            class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600 transition"
+            id="toggleModeBtn"
+            class="bg-green-500 text-white px-4 py-2 rounded"
           >
             Chat với Admin
           </button>
         </div>
-        <p class="text-sm text-gray-600 text-center mt-2">
-          Login to sync your chat history across devices
-        </p>
-      </section>
+      </div>
+    </div>
 
-      <section class="chat-container" id="chatContainer">
-        <!-- Tin nhắn sẽ được render động -->
-      </section>
-
-      <section class="mb-4">
-        <div class="flex items-center text-sm text-gray-500">
-          <span id="typingIndicator" class="hidden"></span>
-          <div id="typingDots" class="flex space-x-2 ml-2 hidden">
-            <div
-              class="w-2 h-2 bg-gray-500 rounded-full animate-bounce"
-              style="animation-delay: 0s"
-            ></div>
-            <div
-              class="w-2 h-2 bg-gray-500 rounded-full animate-bounce"
-              style="animation-delay: 0.2s"
-            ></div>
-            <div
-              class="w-2 h-2 bg-gray-500 rounded-full animate-bounce"
-              style="animation-delay: 0.4s"
-            ></div>
-          </div>
-        </div>
-      </section>
-
-      <section class="flex gap-4">
+    <div class="bg-white p-4 border-t">
+      <div class="max-w-2xl mx-auto flex space-x-2">
         <input
-          type="text"
           id="messageInput"
-          class="flex-1 p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
-          placeholder="Type your message..."
+          type="text"
+          class="flex-1 border rounded px-3 py-2"
+          placeholder="Bắt đầu trò chuyện với ShareAndCare Assistant!"
         />
-        <button
-          id="sendBtn"
-          class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition"
-        >
+        <button id="sendBtn" class="bg-blue-500 text-white px-4 py-2 rounded">
           Gửi
         </button>
-      </section>
+      </div>
+    </div>
 
-      <section class="mt-4">
-        <button
-          id="aiSimulationBtn"
-          class="bg-purple-500 text-white px-4 py-2 rounded hover:bg-purple-600 transition"
-        >
-          🤖 AI Simulation
-        </button>
-      </section>
-
-      <footer class="mt-6 text-sm text-gray-500 flex justify-between">
-        <div>
-          <span id="connectionStatus">Connected</span>
-        </div>
-        <div>
-          <span id="unseenCount">No new messages</span>
-        </div>
-      </footer>
+    <div class="text-center p-2 text-gray-500">
+      <span id="connectionStatus">Connecting...</span>
+      <span id="newMessageStatus" class="ml-2">No new messages</span>
     </div>
 
     <script>
+      // Initialize Socket.IO with explicit backend URL and reconnection options
       const socket = io('http://localhost:3000', {
         reconnection: true,
-        reconnectionAttempts: 5,
+        reconnectionAttempts: 10,
         reconnectionDelay: 1000,
       });
 
-      const chatContainer = document.getElementById('chatContainer');
-      const messageInput = document.getElementById('messageInput');
-      const sendBtn = document.getElementById('sendBtn');
-      const loginBtn = document.getElementById('loginBtn');
-      const aiSimulationBtn = document.getElementById('aiSimulationBtn');
-      const requestAdminBtn = document.getElementById('requestAdminBtn');
-      const userStatus = document.getElementById('userStatus');
-      const chatStatus = document.getElementById('chatStatus');
-      const typingIndicator = document.getElementById('typingIndicator');
-      const typingDots = document.getElementById('typingDots');
-      const connectionStatus = document.getElementById('connectionStatus');
-      const unseenCount = document.getElementById('unseenCount');
-
       let deviceToken =
-        localStorage.getItem('deviceToken') ||
-        'demo_' + Math.random().toString(36).substr(2, 9);
+        localStorage.getItem('deviceToken') || generateDeviceToken();
       localStorage.setItem('deviceToken', deviceToken);
       let userId = null;
       let roomId = null;
-      let isAdminMode = false;
+      let currentMode = 'AI';
 
-      function scrollToBottom() {
-        chatContainer.scrollTop = chatContainer.scrollHeight;
+      /**
+       * Generates a unique device token
+       * @returns {string} UUID-like device token
+       */
+      function generateDeviceToken() {
+        return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, (c) => {
+          const r = (Math.random() * 16) | 0;
+          return (c === 'x' ? r : (r & 0x3) | 0x8).toString(16);
+        });
       }
 
-      function renderMessage(message, type) {
-        const div = document.createElement('div');
-        div.className = `message p-3 rounded-lg mb-2 message-bubble ${
-          type === 'user'
-            ? 'user-message ml-auto'
-            : type === 'ai'
-            ? 'ai-message'
-            : type === 'admin'
-            ? 'admin-message'
-            : 'system-message'
-        }`;
-        const content =
-          message.msg_content || (message.msg_image ? '' : 'No content');
-        div.innerHTML = `
-        <p class="font-bold">${
-          message.msg_sender ||
-          (type === 'ai' ? 'ShareAndCare Assistant' : 'System')
-        }</p>
-        <p>${content}</p>
-        ${
-          message.msg_image
-            ? `<img src="${message.msg_image}" class="mt-2 max-w-full h-auto rounded" />`
-            : ''
-        }
-      `;
-        chatContainer.appendChild(div);
-        scrollToBottom();
-      }
-
+      // Handle successful connection
       socket.on('connect', () => {
-        connectionStatus.textContent = 'Connected';
+        document.getElementById('connectionStatus').textContent = 'Connected';
         socket.emit('join', { deviceToken, userId });
       });
 
-      socket.on('disconnect', () => {
-        connectionStatus.textContent = 'Disconnected';
+      // Handle connection errors
+      socket.on('connect_error', (error) => {
+        document.getElementById(
+          'connectionStatus'
+        ).textContent = `Connection failed: ${error.message}`;
+      });
+
+      // Handle reconnection
+      socket.on('reconnect', (attempt) => {
+        document.getElementById(
+          'connectionStatus'
+        ).textContent = `Reconnected after ${attempt} attempts`;
+        socket.emit('join', { deviceToken, userId });
+      });
+
+      // Handle reconnection failure
+      socket.on('reconnect_failed', () => {
+        document.getElementById('connectionStatus').textContent =
+          'Failed to reconnect. Please refresh the page.';
+      });
+
+      // Handle server errors
+      socket.on('error', (data) => {
+        alert(`Error: ${data.message}`);
       });
 
       socket.on('joined', (data) => {
-        userStatus.textContent =
-          data.userType === 'authenticated' ? `User: ${userId}` : 'Anonymous';
         roomId = data.roomId;
-        chatContainer.innerHTML = '';
-        if (data.conversation.length === 0) {
-          // Hiển thị placeholder nếu không có tin nhắn
-          const placeholder = document.createElement('div');
-          placeholder.className = 'p-8 text-center text-gray-500';
-          placeholder.textContent =
-            'Bắt đầu trò chuyện với ShareAndCare Assistant!';
-          chatContainer.appendChild(placeholder);
-        } else {
-          data.conversation.forEach((msg) => {
-            renderMessage(msg, msg.msg_sender_type?.toLowerCase() || 'user');
-          });
-        }
+        updateChatHistory(data.conversation);
+        updateUserStatus(data.userType);
+        updateChatMode(data.metadata.mode);
+        socket.emit('mark_seen', { conversationId: roomId });
       });
 
       socket.on('new_message', (data) => {
-        // Xóa placeholder nếu có
-        const placeholder = chatContainer.querySelector('.p-8');
-        if (placeholder) placeholder.remove();
-
-        if (data.messages) {
-          data.messages.forEach((msg) => renderMessage(msg, data.type));
-        } else {
-          renderMessage(data.message, data.type);
-        }
+        document.getElementById('newMessageStatus').textContent =
+          'New message received';
+        updateChatHistory(data.messages || [data.message]);
+        socket.emit('mark_seen', { conversationId: roomId });
       });
 
-      socket.on('messages_marked_seen', (data) => {
-        console.log('Messages marked as seen:', data);
+      socket.on('mode_changed', (data) => {
+        updateChatMode(data.mode);
+      });
+
+      socket.on('mode_toggled', (data) => {
+        updateChatMode(data.mode);
       });
 
       socket.on('unseen_count', (data) => {
-        unseenCount.textContent =
-          data.unseenCount > 0
-            ? `${data.unseenCount} new messages`
-            : 'No new messages';
+        document.getElementById(
+          'newMessageStatus'
+        ).textContent = `${data.unseenCount} unseen messages`;
       });
 
       socket.on('user_typing', (data) => {
-        typingIndicator.classList.toggle('hidden', !data.isTyping);
-        typingDots.classList.toggle('hidden', !data.isTyping);
-        typingIndicator.textContent = data.isTyping
-          ? data.userId.startsWith('admin_')
-            ? 'Admin đang trả lời'
-            : 'AI đang trả lời'
-          : '';
+        document.getElementById('newMessageStatus').textContent = data.isTyping
+          ? 'Typing...'
+          : 'No new messages';
       });
 
-      socket.on('login_success', (data) => {
-        userStatus.textContent = `User: ${userId}`;
-        chatContainer.innerHTML = '';
-        data.conversations.forEach((conv) => {
-          conv.messages.forEach((msg) =>
-            renderMessage(msg, msg.msg_sender_type?.toLowerCase() || 'user')
-          );
-        });
-      });
-
-      socket.on('admin_request_response', (data) => {
-        renderMessage(
-          { msg_sender: 'System', msg_content: data.message },
-          'system'
-        );
-        requestAdminBtn.disabled = data.success;
-        requestAdminBtn.textContent = data.success
-          ? 'Đang chờ Admin...'
-          : 'Chat với Admin';
-        chatStatus.textContent = data.success
-          ? 'Waiting for Admin'
-          : 'Chatting with AI';
-        isAdminMode = data.success;
-      });
-
-      socket.on('error', (data) => {
-        renderMessage(
-          { msg_sender: 'System', msg_content: data.message },
-          'system'
-        );
-      });
-
-      socket.on('ai_simulation_started', (data) => {
-        aiSimulationBtn.disabled = true;
-        aiSimulationBtn.textContent = 'AI Simulation Running...';
-      });
-
-      socket.on('ai_simulation_completed', () => {
-        aiSimulationBtn.disabled = false;
-        aiSimulationBtn.textContent = '🤖 AI Simulation';
-      });
-
-      sendBtn.addEventListener('click', () => {
+      document.getElementById('sendBtn').addEventListener('click', () => {
+        const messageInput = document.getElementById('messageInput');
         const content = messageInput.value.trim();
-        if (!content) return;
-        socket.emit('send_message', { content, useAI: !isAdminMode });
-        messageInput.value = '';
+        if (content && roomId) {
+          socket.emit('send_message', {
+            content,
+            roomId,
+            useAI: currentMode === 'AI',
+            senderType: userId ? 'user' : 'anonymous',
+          });
+          messageInput.value = '';
+        }
       });
 
-      messageInput.addEventListener('keypress', (e) => {
-        if (e.key === 'Enter') sendBtn.click();
+      document.getElementById('messageInput').addEventListener('input', () => {
+        if (roomId) {
+          socket.emit('typing_start', { roomId });
+          clearTimeout(window.typingTimeout);
+          window.typingTimeout = setTimeout(() => {
+            socket.emit('typing_stop', { roomId });
+          }, 1000);
+        }
       });
 
-      messageInput.addEventListener('input', () => {
-        socket.emit('typing_start', { roomId });
-        clearTimeout(window.typingTimeout);
-        window.typingTimeout = setTimeout(
-          () => socket.emit('typing_stop', { roomId }),
-          1000
-        );
+      document.getElementById('toggleModeBtn').addEventListener('click', () => {
+        const newMode = currentMode === 'AI' ? 'ADMIN' : 'AI';
+        socket.emit('toggle_admin_mode', { roomId, mode: newMode });
       });
 
-      loginBtn.addEventListener('click', () => {
-        userId = prompt('Enter your user ID (for demo, any string works):');
+      document.getElementById('loginBtn').addEventListener('click', () => {
+        userId = prompt('Enter user ID:');
         if (userId) {
           socket.emit('user_login', { userId, deviceToken });
         }
       });
 
-      requestAdminBtn.addEventListener('click', () => {
-        if (!roomId) {
-          alert('Please join a chat room first!');
-          return;
-        }
-        socket.emit('request_admin', { roomId, deviceToken, userId });
-      });
+      /**
+       * Updates the chat history UI
+       * @param {Array} messages - Array of message objects
+       */
+      function updateChatHistory(messages) {
+        const chatHistory = document.getElementById('chatHistory');
+        chatHistory.innerHTML = messages
+          .map(
+            (msg) => `
+        <div class="p-2 ${
+          msg.msg_sender_type === 'user' ? 'text-right' : 'text-left'
+        }">
+          <span class="inline-block bg-${
+            msg.msg_sender_type === 'user'
+              ? 'blue'
+              : msg.msg_sender_type === 'AI'
+              ? 'gray'
+              : 'green'
+          }-100 rounded px-3 py-1">
+            ${
+              msg.msg_content ||
+              (msg.msg_image
+                ? `<img src="${msg.msg_image}" class="max-w-xs">`
+                : '')
+            }
+          </span>
+        </div>
+      `
+          )
+          .join('');
+      }
 
-      aiSimulationBtn.addEventListener('click', () => {
-        socket.emit('start_ai_simulation', {
-          prompt: 'Start a product discussion',
-          turns: 3,
-        });
-      });
+      /**
+       * Updates the user status UI
+       * @param {string} userType - 'authenticated' or 'anonymous'
+       */
+      function updateUserStatus(userType) {
+        document.getElementById('userStatus').textContent =
+          userType === 'authenticated' ? `User: ${userId}` : 'Anonymous';
+      }
 
-      scrollToBottom();
+      /**
+       * Updates the chat mode UI
+       * @param {string} mode - 'AI' or 'ADMIN'
+       */
+      function updateChatMode(mode) {
+        currentMode = mode;
+        document.getElementById(
+          'chatMode'
+        ).textContent = `Chatting with ${mode}`;
+        document.getElementById('toggleModeBtn').textContent =
+          mode === 'AI' ? 'Chat với Admin' : 'Chat với AI';
+      }
     </script>
   </body>
 </html>
